# TreeForest

./: CMakeLists.txt  README.md  library.json
example/: binary_tree.cpp
include/: TreeNode.h  TreeNode.hpp
include/TreeForest/: BinaryTree.h  BinaryTree.hpp
include/TreeNodes/: BinaryTreeNode.h  TreeNode.h  TreeNode.hpp
test/: main.cpp  test_insert1.cpp  test_insert2.cpp  test_insert3.cpp  test_remove1.cpp  test_remove2.cpp  test_remove3.cpp
